refactor: update dependencies to latest

--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "start": "start-storybook -p 8080"
   },
   "dependencies": {
-    "@babel/core": "7.4.5",
-    "babel-loader": "8.0.6",
-    "@storybook/addon-a11y": "^5.2.1",
-    "@storybook/addon-actions": "^5.2.1",
-    "@storybook/addon-backgrounds": "^5.2.1",
-    "@storybook/addon-events": "^5.2.1",
-    "@storybook/addon-jest": "^5.2.1",
-    "@storybook/addon-knobs": "^5.2.1",
-    "@storybook/addon-links": "^5.2.1",
-    "@storybook/addon-notes": "^5.2.1",
-    "@storybook/addon-options": "^5.2.1",
-    "@storybook/addon-storysource": "^5.2.1",
-    "@storybook/addon-viewport": "^5.2.1",
+    "@babel/core": "latest",
+    "babel-loader": "latest",
+    "@storybook/addon-a11y": "latest",
+    "@storybook/addon-actions": "latest",
+    "@storybook/addon-backgrounds": "latest",
+    "@storybook/addon-events": "latest",
+    "@storybook/addon-jest": "latest",
+    "@storybook/addon-knobs": "latest",
+    "@storybook/addon-links": "latest",
+    "@storybook/addon-notes": "latest",
+    "@storybook/addon-options": "latest",
+    "@storybook/addon-storysource": "latest",
+    "@storybook/addon-viewport": "latest",
     "@storybook/react": "latest",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "styled-components": "4.4.1"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "styled-components": "latest"
   },
   "devDependencies": {
     "@types/react": "^16.9.4",
