refactor: update dependencies

--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
   },
   "dependencies": {
     "@babel/core": "latest",
-    "babel-loader": "latest",
-    "@storybook/addon-a11y": "latest",
-    "@storybook/addon-actions": "latest",
-    "@storybook/addon-backgrounds": "latest",
-    "@storybook/addon-events": "latest",
-    "@storybook/addon-jest": "latest",
-    "@storybook/addon-knobs": "latest",
-    "@storybook/addon-links": "latest",
+    "@storybook/addon-a11y": "6.0.26",
+    "@storybook/addon-actions": "6.0.26",
+    "@storybook/addon-backgrounds": "6.0.26",
+    "@storybook/addon-events": "6.0.26",
+    "@storybook/addon-jest": "6.0.26",
+    "@storybook/addon-knobs": "6.0.26",
+    "@storybook/addon-links": "6.0.26",
     "@storybook/addon-notes": "latest",
     "@storybook/addon-options": "latest",
-    "@storybook/addon-storysource": "latest",
+    "@storybook/addon-storysource": "6.0.26",
     "@storybook/addon-viewport": "latest",
-    "@storybook/react": "latest",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "@storybook/react": "6.0.26",
+    "babel-loader": "latest",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "styled-components": "latest"
   },
   "devDependencies": {
